feat: Darkmode und Akzentfarbe zu Erscheinung verschoben, Bottom Nav Elemente-Einstellungen ergänzt
- Darkmode aus Entwickler-Tools entfernt und zu Erscheinung-Tab verschoben
- Akzentfarbe aus Entwickler-Tools entfernt und zu Erscheinung-Tab verschoben
- Bottom Navigation Einstellungen erweitert um individuelle Elemente-Steuerung
- Checkbox-Stile für Bottom Nav Elemente hinzugefügt
- JavaScript-Logik für neue Einstellungen implementiert
- CSS-Variablen für Akzentfarbe korrigiert

--- a/css/variables.css
+++ b/css/variables.css
@@ -16,6 +16,7 @@
     
     /* Brand Colors */
     --primary-color: #ed2939;
+    --accent-color: #ed2939; /* Akzentfarbe für UI-Elemente */
     --primary-light: #ff4757;
     --secondary-color: #003366;
     --success-color: #2ecc71;
